WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219436
Fix for accessibility layout tests involving ranges in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=219436
Summary
Fix for accessibility layout tests involving ranges in isolated tree mode.
Andres Gonzalez
Reported
2020-12-02 09:46:02 PST
Fix for accessibility layout tests involving ranges in isolated tree mode.
Attachments
Patch
(6.72 KB, patch)
2020-12-02 10:02 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2020-12-02 10:02:19 PST
Created
attachment 415231
[details]
Patch
EWS
Comment 2
2020-12-02 10:47:25 PST
Committed
r270352
: <
https://trac.webkit.org/changeset/270352
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 415231
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-12-02 10:48:18 PST
<
rdar://problem/71901344
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug